edit display none offerte del giorno

--- a/index.html
+++ b/index.html
@@ -264,6 +264,7 @@
             </div>
 
             <!-- OFFERTE DEL GIORNO  -->
+             <div class="d-none d-md-block">
              <h3 class="mt-5">Offerta del giorno</h3>
             <div class="row">
                 <div class="col-8">
@@ -279,6 +280,7 @@
                     <button class="badge rounded-4 bg-dark">Best offer</button>
                 </div>
             </div>
+        </div>
 
             <!-- Last Minute  -->
             <h3 class="mt-5">Last Minute</h3>
