--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
             </div>
 
             <!-- OFFERTE DEL GIORNO  -->
-             <div class="d-none d-md-block">
+             <div class="d-none d-sm-block">
              <h3 class="mt-5">Offerta del giorno</h3>
             <div class="row">
                 <div class="col-8">
@@ -357,7 +357,7 @@
     <footer>
         <section class="bg-black text-center"> 
         <button class="text-center bg-transparent text-white pt-1 pb-1 px-2 ps-2 border-2 border-secondary rounded-3 m-5 mb-3">Contattaci</button>
-        <p class="pb-4">© 2024 Juventus Football Club S.p.A.</p>
+        <p class="pb-4 text-white">© 2024 Juventus Football Club S.p.A.</p>
     </section>
     </footer>
     <script
